<resources>
    <string name="img_cd_list_item">List item preview</string>
    <string name="img_cd_grid_item">Grid item preview</string>
    <string name="nd_drawer_open">open</string>
    <string name="nd_drawer_close">close</string>
    <string name="nd_manage_accounts">Manage accounts</string>
    <string name="nd_select_account">Select Account</string>
    <string name="h_repository_label">Repository</string>
    <string name="h_library_label">Library</string>
    <string name="h_ad_title_server_sign_in">Server sign-in</string>
    <string name="h_ad_label_wrong_password">The username or password is incorrect. Re-enter your credentials.</string>
    <string name="h_ad_label_server_profile">Server Profile</string>
    <string name="h_rd_description">If you enjoy using TIBCO® JasperMobile™, please take a moment to rate it. It won\'t take more than a minute. Thanks for your support!</string>
    <string name="h_rd_rate">Rate</string>
    <string name="h_rd_never">No, thanks</string>
    <string name="h_rd_later">Remind me later</string>
    <string name="spm_delete_btn">Delete</string>
    <string name="sp_save_btn">Save</string>
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>
    <string name="sp_error_duplicate_alias">Duplicate account name.</string>
    <string name="sp_error_reserved_alias">Alias reserved.</string>
    <string name="resources_not_found">No resources found</string>
    <string name="r_search_nothing_to_display">No items match your search.</string>
    <string name="r_ab_switch">Switch view</string>
    <string name="r_ab_search">Search</string>
    <string name="r_ab_refresh">Refresh</string>
    <string name="r_cm_view_details">View Details</string>
    <string name="r_cm_add_to_favorites_failed">Failed to add to favorites.</string>
    <string name="r_cm_add_to_favorites">Add to favorites</string>
    <string name="r_cm_added_to_favorites">Added to favorites.</string>
    <string name="r_cm_remove_from_favorites">Remove from favorites</string>
    <string name="r_cm_removed_from_favorites">Removed from favorites.</string>
    <string name="r_cm_remove_from_favorites_failed">Failed to remove from favorites.</string>
    <string name="r_cm_print">Print</string>
    <string name="r_cm_share">Share</string>
    <string name="r_cm_info">Info</string>
    <string name="r_cm_cancel_saving">Cancel saving</string>
    <string name="r_cm_enable">Enable</string>
    <string name="r_cm_disable">Disable</string>
    <string name="r_cm_edit">Edit</string>
    <string name="r_cm_delete">Delete</string>
    <string name="r_cm_available_chart_types">Chart Types</string>
    <string name="r_pd_running_report_msg">Running report...</string>
    <string name="r_pd_initializing_msg">Initializing...</string>
    <string name="s_hint">Search resources</string>
    <string name="s_saved_items_hint">Search saved files</string>
    <string name="s_ab_filter_by">Filter by</string>
    <string name="s_ab_sort_by">Sort by</string>
    <string name="fv_try_again_btn">Try again</string>
    <string name="fv_can_not_show_message">Can not show file content</string>
    <string name="fv_undefined_message">Can not open. Resource type undefined</string>
    <string name="fv_opening_message">Opening file…</string>
    <string name="s_fd_option_all">All</string>
    <string name="s_fd_option_reports">Reports</string>
    <string name="s_fd_option_saved_values">Saved values</string>
    <string name="s_fd_option_dashboards">Dashboards</string>
    <string name="s_fd_option_files">Files</string>
    <string name="s_fd_option_others">Others</string>
    <string name="s_fd_sort_label">Label</string>
    <string name="s_fd_sort_date">Creation date</string>
    <string name="f_fd_option_folders">Folders</string>
    <string name="sa_show_about">About</string>
    <string name="sa_about_info"><![CDATA[TIBCO® JasperMobile™ v%1$s<br><br>Management tool and report viewer for TIBCO JasperReports® Server 6.0 and greater.<br><br>For more information visit:<br><a href="http://community.jaspersoft.com/project/tibco-jaspermobile-android">http://community.jaspersoft.com/project/tibco-jaspermobile-android</a><br><br>For privacy policy information visit:<br><a href="http://www.tibco.com/company/privacy-cma">http://www.tibco.com/company/privacy-cma</a><br><br>For latest update information visit:<br><a href="https://github.com/Jaspersoft/js-android-app/wiki/What\'s-new">https://github.com/Jaspersoft/js-android-app/wiki/What\'s-new</a><br><br>Copyright © 2005-2016 TIBCO Software, Inc.]]></string>
    <string name="sa_about_privacy">Privacy Policy</string>
    <string name="sa_show_feedback">Feedback</string>
    <string name="ro_run_report_btn">Run Report</string>
    <string name="ro_default">Default</string>
    <string name="ro_page_title">Filters</string>
    <string name="ro_save_ro">Save values</string>
    <string name="ro_save_text">The Name for the Saved Values</string>
    <string name="ro_save_same">This report already has saved values with this name. They will be overwritten.</string>
    <string name="ro_default_save_name">Options</string>
    <string name="ro_delete_ro">Delete saved values</string>
    <string name="ro_reset_ro">Reset values</string>
    <string name="ro_ms_available">Available: %1$s</string>
    <string name="ro_ms_selected">Selected: %1$s</string>
    <string name="ro_no_items_selected">No items selected</string>
    <string name="ro_select_all">Select all</string>
    <string name="ro_deselect_all">Deselect all</string>
    <string name="ro_inverse">Inverse</string>
    <string name="ro_search">Search list…</string>
    <string name="ro_show">Saved values</string>
    <string name="ri_schedule">Schedule</string>
    <string name="ri_type_title">Type:</string>
    <string name="ri_label_title">Label:</string>
    <string name="ri_description_title">Description:</string>
    <string name="ri_modified_title">Modified date:</string>
    <string name="ri_creation_title">Creation date:</string>
    <string name="ri_file_format">File format:</string>
    <string name="ri_file_size">File size:</string>
    <string name="ri_version_title">Version:</string>
    <string name="ri_permissions_title">User Access:</string>
    <string name="rp_no_access">No access</string>
    <string name="rp_administer">Modify, Delete, Administrate</string>
    <string name="rp_read_only">Read-Only</string>
    <string name="rp_read_write">Modify</string>
    <string name="rp_read_delete">Read-Only, Delete</string>
    <string name="rp_read_write_delete">Modify, Delete</string>
    <string name="rp_execute_only">Execute only</string>
    <string name="sch_new">New schedule</string>
    <string name="sch_edit">Edit schedule</string>
    <string name="sch_job_name">Scheduled Job Name</string>
    <string name="sch_file_name">Output file name</string>
    <string name="sch_run_immediately">Run immediately</string>
    <string name="sch_start_date">Schedule start date</string>
    <string name="sch_end_date">Schedule end date</string>
    <string name="sch_destination">Output destination path</string>
    <string name="sch_created">Job scheduled</string>
    <string name="sch_updated">Job updated</string>
    <string name="sch_deleted">Schedule deleted</string>
    <string name="sch_jobs">Schedules</string>
    <string name="sch_not_found">No job is found.</string>
    <string name="sch_format_paginated">%1$s (Paginated)</string>
    <string name="sch_next_run_label">Next run: %1$s</string>
    <string name="sch_state_normal">Normal</string>
    <string name="sch_state_complete">Complete</string>
    <string name="sch_state_executing">Executing</string>
    <string name="sch_state_error">Error</string>
    <string name="sch_state_paused">Paused</string>
    <string name="sch_state_unknown">Unknown</string>
    <string name="sdr_delete_title">Delete schedule</string>
    <string name="sdr_delete_message">Do you really want to delete this schedule?</string>
    <string name="sch_choose_report">Choose report to schedule…</string>
    <string name="sch_resource_label">Report label</string>
    <string name="sch_resource_uri">Report uri</string>
    <string name="sch_label">Name</string>
    <string name="sch_description">Description</string>
    <string name="sch_id">Id</string>
    <string name="sch_owner">Owner</string>
    <string name="sch_state">State</string>
    <string name="sch_lass_run">Last run</string>
    <string name="sch_next_run">Next run</string>
    <string name="rv_ab_bookmarks" translatable="false">Bookmarks</string>
    <string name="rv_bookmark_page" translatable="false">Page: %s</string>
    <string name="rv_ab_chart_types" translatable="false">Chart Types</string>
    <string name="rv_apply_filters_message" translatable="false">You must apply input values before the report can be displayed.</string>
    <string name="rv_apply_filters_action" translatable="false">Apply</string>
    <string name="rv_apply_filters_no_data" translatable="false">You may apply other filters.</string>
    <string name="rv_ab_save_report">Save Report</string>
    <string name="rv_ab_show_filters">Show Filters</string>
    <string name="rv_error_empty_report">There is no report data.</string>
    <string name="rv_error_empty_report_title">The report is empty.</string>
    <string name="rv_select_page">Select page</string>
    <string name="rv_out_of_range">The requested page is out of range.</string>
    <string name="rv_dialog_reload">Reload</string>
    <string name="rv_open_link_chooser">Open link in</string>
    <string name="rv_webview_still_loading">Its taking too much time to load. Please, wait or try again later.</string>
    <string name="rv_t_external_storage_not_available">The external memory card is not available. Please insert the card and try again.</string>
    <string name="annotation_title">Touch to annotate…</string>
    <string name="annotation_pick_color">Pick color…</string>
    <string name="annotation_pick_line_size">Pick line size…</string>
    <string name="sr_repeat_every">Repeat every (required)</string>
    <string name="sr_schedule_end">Schedule end</string>
    <string name="sr_run_number_of_times">Run a set number of times</string>
    <string name="sr_number_of_runs">Number of runs</string>
    <string name="sr_run_until">Run until a specified date</string>
    <string name="sr_run_indefinitely">Run indefinitely</string>
    <string name="sr_months">Months</string>
    <string name="sr_hours">Hours (required):</string>
    <string name="sr_hours_hint" translatable="false">Enter 24&#8211;hour times like 9, 12, 15 or ranges like 9&#8211;12, 1&#8211;17</string>
    <string name="sr_minutes">Minutes (required):</string>
    <string name="sr_minutes_hint" translatable="false">Enter 0, 15, 30, 45 to run every &#188; hour</string>
    <string name="sr_days">Days</string>
    <string name="sr_selected_days">Selected days:</string>
    <string name="sr_dates_in_month">Dates in month:</string>
    <string name="sr_dates_in_month_hint" translatable="false">Enter dates (9, 12, 15) or date ranges (9&#8211;12, 1&#8211;17)</string>
    <string name="st_category_resource_cache">Resources cache</string>
    <string name="st_category_connection">Connection</string>
    <string name="st_title_cache_enable">Enable cache</string>
    <string name="st_title_cache_expiration">Cache expiration period</string>
    <string name="st_title_clear_cache">Clear cache</string>
    <string name="st_title_connect_timeout">Connection timeout</string>
    <string name="st_title_read_timeout">Data read timeout</string>
    <string name="st_send_crashes">Send crash reports</string>
    <string name="st_summary_cache_enable">Cache resources for the specified amount of time</string>
    <string name="st_summary_clear_cache">Remove all cached resources</string>
    <string name="st_category_more">More</string>
</resources>