<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2015 TIBCO Software, Inc. All rights reserved.
  ~ http://community.jaspersoft.com/project/jaspermobile-android
  ~
  ~ Unless you have purchased a commercial license agreement from TIBCO Jaspersoft,
  ~ the following license terms apply:
  ~
  ~ This program is part of TIBCO Jaspersoft Mobile for Android.
  ~
  ~ TIBCO Jaspersoft Mobile is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ TIBCO Jaspersoft Mobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with TIBCO Jaspersoft Mobile for Android. If not, see
  ~ <http://www.gnu.org/licenses/lgpl>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/st_category_resource_cache">

        <CheckBoxPreference
            android:key="pref_repo_cache_enabled"
            android:defaultValue="true"
            android:title="@string/st_title_cache_enable"
            android:summary="@string/st_summary_cache_enable"/>

        <EditTextPreference
            android:key="pref_repo_cache_expiration"
            android:defaultValue="48"
            android:dependency="pref_repo_cache_enabled"
            android:inputType="number"
            android:title="@string/st_title_cache_expiration"/>

        <Preference
            android:key="pref_clear_cache"
            android:title="@string/st_title_clear_cache"
            android:summary="@string/st_summary_clear_cache"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/st_category_connection">

        <EditTextPreference
            android:key="pref_connect_timeout"
            android:defaultValue="15"
            android:title="@string/st_title_connect_timeout"
            android:inputType="number"/>

        <EditTextPreference
            android:key="pref_read_timeout"
            android:defaultValue="120"
            android:inputType="number"
            android:title="@string/st_title_read_timeout" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/st_category_more">

        <CheckBoxPreference
            android:key="pref_animation_enabled"
            android:defaultValue="true"
            android:title="@string/st_title_animations" />

        <CheckBoxPreference
            android:key="pref_crash_reports"
            android:defaultValue="true"
            android:title="@string/st_send_crashes"
            android:summary="@string/st_send_crashes_note"/>

    </PreferenceCategory>

</PreferenceScreen>