<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © 2014 TIBCO Software, Inc. All rights reserved.
    http://community.jaspersoft.com/project/jaspermobile-android

    Unless you have purchased a commercial license agreement from Jaspersoft,
    the following license terms apply:

    This program is part of Jaspersoft Mobile for Android.

    Jaspersoft Mobile is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Jaspersoft Mobile is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with Jaspersoft Mobile for Android. If not, see
    <http://www.gnu.org/licenses/lgpl>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favoriteAction"
        android:icon="@drawable/ic_rating_not_favorite"
        android:title="@string/r_cm_add_to_favorites"
        android:showAsAction="always" />

    <item
        android:id="@+id/showFilters"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/rv_ab_show_filters"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/saveReport"
        android:icon="@drawable/ic_action_save"
        android:title="@string/rv_ab_save_report"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/refreshAction"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/r_ab_refresh"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/aboutAction"
        android:icon="@drawable/ic_action_about"
        android:title="@string/r_cm_show_resource_info"
        android:showAsAction="ifRoom" />

</menu>