<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright © 2016 TIBCO Software,Inc.All rights reserved.
  ~ http://community.jaspersoft.com/project/jaspermobile-android
  ~
  ~ Unless you have purchased a commercial license agreement from TIBCO Jaspersoft,
  ~ the following license terms apply:
  ~
  ~ This program is part of TIBCO Jaspersoft Mobile for Android.
  ~
  ~ TIBCO Jaspersoft Mobile is free software:you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation,either version 3of the License,or
  ~ (at your option)any later version.
  ~
  ~ TIBCO Jaspersoft Mobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY;without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with TIBCO Jaspersoft Mobile for Android.If not,see
  ~ <http://www.gnu.org/licenses/lgpl>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="gone"
    tools:visibility="visible"
    android:id="@+id/calendarRecurrenceForm"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/selectMonths"
        android:clickable="true"
        android:background="?android:selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/saveReport.outputFormat.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sr_months"/>

        <TextView
            android:id="@+id/selectedMonths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            tools:text="January, February"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/saveReport.outputFormat.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sr_days"/>

        <RadioGroup
            android:id="@+id/selectDaysControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/selectDays"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sr_selected_days"
            />

            <TextView
                android:id="@+id/selectedDaysInWeek"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/empty_text_place_holder"
                android:singleLine="true"
                tools:text="100"/>


            <RadioButton
                android:id="@+id/selectDaysInMonth"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sr_dates_in_month"
            />

            <TextView
                android:id="@+id/selectedDaysInMonth"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:text="@string/empty_text_place_holder"
                tools:text="100"/>

            <TextView
                android:id="@+id/selectedDaysInMonthHint"
                android:text="@string/sr_dates_in_month_hint"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectHours"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/inputControl.label"
            android:text="@string/sr_hours"/>

        <TextView
            android:id="@+id/selectedHours"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/empty_text_place_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

        <TextView
            android:text="@string/sr_hours_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectMinutes"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/inputControl.label"
            android:text="@string/sr_minutes"/>

        <TextView
            android:id="@+id/selectedMinutes"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

        <TextView
            android:text="@string/sr_minutes_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.jaspersoft.android.jaspermobile.widget.DateTimeView
        android:id="@+id/calendarEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
</LinearLayout>