<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simpleRecurrenceForm"
    tools:visibility="visible"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/repeat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/saveReport.outputFormat.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sr_repeat_every"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/repeatInterval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:singleLine="true"
                tools:text="100"/>

            <TextView
                android:id="@+id/repeatUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:singleLine="true"
                tools:text="days"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scheduleEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/saveReport.outputFormat.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sr_schedule_end"/>

        <RadioGroup
            android:id="@+id/scheduleEndGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/runsOccurrenceControl"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sr_run_number_of_times"
            />

            <LinearLayout
                android:id="@+id/numberOfRunsControl"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    style="@style/saveReport.outputFormat.label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sr_number_of_runs"/>

                <TextView
                    android:id="@+id/numberOfRuns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/empty_text_place_holder"
                    tools:text="100"/>
            </LinearLayout>

            <RadioButton
                android:id="@+id/runsUntilControl"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sr_run_until"
            />

            <com.jaspersoft.android.jaspermobile.widget.DateTimeView
                android:id="@+id/runUntilDateControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/runsIndefinitelyControl"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sr_run_indefinitely"
            />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>